[gd_scene load_steps=8 format=3 uid="uid://ca3mogffsrh84"]

[ext_resource type="Script" path="res://screens/battle/components/team_panel/team_panel.gd" id="1_7nqvp"]
[ext_resource type="Texture2D" uid="uid://6cjmjcfeje3c" path="res://assets/hud/popup.png" id="2_gcbv4"]
[ext_resource type="Texture2D" uid="uid://bdlp8wkff2hna" path="res://assets/teams_icons/Blue Potion 3.png" id="3_27naa"]
[ext_resource type="PackedScene" uid="uid://d3hgujhlslrnh" path="res://view/styled_button/styled_button.tscn" id="3_kg12j"]
[ext_resource type="Theme" uid="uid://cgj53xbuypu2k" path="res://assets/theme/theme.tres" id="4_xbwpt"]
[ext_resource type="Texture2D" uid="uid://b0p6lephwu67s" path="res://assets/hud/grey_overlay.png" id="5_8l2h7"]
[ext_resource type="PackedScene" uid="uid://t8o4xk11k8c0" path="res://screens/battle/components/combatant_thumbnail/combatant_thumbnail.tscn" id="6_cplmk"]

[node name="TeamPanel" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7nqvp")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_gcbv4")
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 8

[node name="TeamIcon" type="TextureRect" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("3_27naa")
stretch_mode = 2

[node name="TeamName" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("4_xbwpt")
theme_override_font_sizes/font_size = 32
text = "Black Swans"
horizontal_alignment = 1
autowrap_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("5_8l2h7")
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="ScrollContainer" type="ScrollContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/NinePatchRect/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("4_xbwpt")
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/NinePatchRect/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="CombatantsContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/NinePatchRect/MarginContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="CombatantThumbnailTemplate" parent="NinePatchRect/MarginContainer/VBoxContainer/NinePatchRect/MarginContainer/ScrollContainer/MarginContainer/CombatantsContainer" instance=ExtResource("6_cplmk")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" parent="NinePatchRect/MarginContainer" instance=ExtResource("3_kg12j")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
